:lipstick: fix cloud z-index

--- a/source/css/_layout/banner.styl
+++ b/source/css/_layout/banner.styl
@@ -116,6 +116,7 @@ if (hexo-config('mode') == 'light') {
 
 if (hexo-config('banner.cloud')) {
   .cloud {
+    display: flex;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -125,8 +126,8 @@ if (hexo-config('banner.cloud')) {
     box-sizing: border-box;
 
     .waves {
-      position: relative;
       display: flex;
+      position: relative;
       width: 100%;
       height: 100px;
 
